alignment and text fixes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -125,6 +125,16 @@
     height: 185vh;
 }
 
+@media (min-width: 621px) and (max-width: 1200px) {
+    /* For tablets: */
+    .wrapper {
+        height: 160vh;
+    }
+    .under {
+        top: 20px;
+    }
+}
+
 @media (min-width: 520px) and (max-width: 620px) {
     /* For mobile phones: */
     .wrapper {
@@ -138,13 +148,26 @@
 @media (max-width: 520px) {
     /* For mobile phones: */
     .wrapper {
+        height: 170vh;
+    }
+    .under {
+        top: 20px;
+    }
+    .over {
+        height: 200vh;
+    }
+}
+
+@media (max-height: 700px) {
+    /* For short mobile phones: */
+    .wrapper {
         height: 215vh;
     }
     .under {
         top: 20px;
     }
     .over {
-        height: 100vh;
+        height: 200vh;
     }
 }
 
@@ -152,7 +175,7 @@
     margin-top: -110vh;
     position: relative;
     background-color: #fff;
-    height: 100vh;
+    height: 120vh;
 }
 
 .textBox {
@@ -163,4 +186,9 @@
     margin-left: auto;
     margin-right: auto;
     min-height: 80vh;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+        Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    font-weight: 300;
+    letter-spacing: 0.1px;
+    line-height: 23px;
 }
